--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,10 +1,10 @@
 
-.big-board {
+/* .big-board {
     border: 1px solid red;
     height: 600px;
-}
+} */
 
 .board-row {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 200px;
 }
