--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,6 +3,5 @@
     width: 800px;
     border: 2px solid black;
     border-radius: 10px;
-    position:absolute;
-    left: 25%;
+    /* background-color: red; */
 }
