divs instead of buttons

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -7,4 +7,9 @@
 .board-row {
     /* border: 1px solid blue; */
     height: 200px;
+
+}
+
+.big-board {
+    /* background-color: aquamarine; */
 }
