--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,5 +3,9 @@
     width: 800px;
     border: 2px solid black;
     border-radius: 10px;
-    /* background-color: red; */
+    background-color: red;
 }
+
+/* .game {
+    background-color: blue;
+} */
