--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,21 @@
     border-radius: 10px;
     background-color: red;
 }
-
-/* .game {
+/* 
+.game {
     background-color: blue;
 } */
+.game-info {
+    background-color: azure;
+    width: 25%;
+    margin: 0 auto;
+    margin-top: 10px;
+
+}
+h1 {
+    font-size: 50px;
+}
+.title {
+    color: aliceblue;
+    /* font-size: larger; */
+}
